<resources>
    <string name="app_name">BMotion</string>
    <!-- Strings related to login -->
    <string name="prompt_user_login">email/telp</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="prompt_login">LOGIN</string>
    <string name="welcome">CUSTOMER LOGIN</string>
    <string name="invalid_username">Username tidak sesuai</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login gagal"</string>
    <string name="login_success">"Login berhasil"</string>
    <string name="prompt_forgot_password">Forgot Password?</string>
    <string name="prompt_remember_me">Remember me</string>
    <string name="prompt_create_account">Daftar Baru</string>
    <string name="connect_server_failed">Gagal konek dengan server</string>
    <string name="prompt_sign_up">Sign Up</string>
    <string name="prompt_nik">-- No. KTP --</string>
    <string name="prompt_fullname">-- Nama Lengkap --</string>
    <string name="prompt_email_address">-- Email --</string>
    <string name="prompt_phone_numb">-- Telp --</string>
    <string name="prompt_city">-- Kecamatan --</string>
    <string name="disclaimer_sign_up_1">your password will be sent</string>
    <string name="disclaimer_sign_up_2">to your email address</string>
    <string name="prompt_capture">Capture</string>
    <string name="prompt_upload_file">Klik untuk upload file</string>
    <string name="msg">Mohon terima semua permisi</string>
    <string name="pick_date">Pick Date</string>
    <string name="prompt_add_file_upload">-- upload dokumen --</string>
    <string name="prompt_exp_date">-- Masa Berlaku --</string>
    <string name="prompt_quota">-- Quota --</string>
    <string name="prompt_noSurat">-- No. Surat --</string>
    <string name="prompt_signup_password">-- password --</string>
    <string name="prompt_failed_get_file">Tidak dapat mendapatkan file upload</string>
    <string name="b_motion">B-MOTION</string>
    <string name="prompt_pick_file">Pilih file</string>
    <string name="prompt_loading">mohon tunggu . . .</string>
    <string name="prompt_welcome">Selamat Datang</string>
    <string name="prompt_username">Varrenco JA</string>
    <string name="prompt_quota_bbm">Quota BBM</string>
    <string name="prompt_total_buy_bbm">Total pembelian BBM</string>
    <string name="prompt_count_quota_bbm">200 ltr</string>
    <string name="prompt_month_year">APR 2020</string>
    <string name="prompt_input">Input</string>
    <string name="prompt_support">Dukungan</string>
    <string name="prompt_profile">Profil</string>
    <string name="prompt_info">Info</string>
    <string name="prompt_outlet">Outlet Terdekat</string>
    <string name="prompt_item_outlet">SPBU 567</string>
    <string name="prompt_item_outlet_address">Jl. Pekapuran No. 57</string>
    <string name="prompt_twice_exit">Silakan klik KEMBALI lagi untuk keluar</string>
    <string name="prompt_charging_data_input">Input\nData Pengisian</string>
    <string name="prompt_subsidi">Subsidi</string>
    <string name="prompt_non_subsidi">Non Subsidi</string>
    <string name="prompt_quota_remaining">200 Sisa Kuota</string>
    <string name="prompt_premium">PREMIUM</string>
    <string name="prompt_enter_the_numb_of_units">Masukkan jumlah unit dalam liter</string>
    <string name="prompt_ok">OK</string>
    <string name="error_cant_empty">Bidang tidak boleh kosong</string>
    <string name="prompt_set_your_image">Pilih gambar Anda</string>
    <string name="prompt_qr_code_is_your_queue">QR Code Antrian Anda</string>
    <string name="prompt_title_kritik_saran">Kritik dan Saran</string>
    <string name="prompt_valid_until">Berlaku hingga</string>
    <string name="prompt_valid_time">10:00 am</string>
    <string name="prompt_remark_qr_code">Scan QR code ini di Kasir SPBU kami untuk mendapatkan\nstruk yang berisi barcode untuk ditunjukan kepada\noperator pengisian bahan bakar</string>
    <string name="prompt_phone_number">0895355358977</string>
    <string name="prompt_purchase_history">Riwayat Pembelian</string>
    <string name="prompt_qa">Tanya Jawab</string>
    <string name="prompt_kritik_saran">Kritik dan Saran</string>
    <string name="prompt_sk">Syarat dan Ketentuan</string>
    <string name="prompt_quota_user_up">Belanja Anda sudah melebihi Quota</string>
    <string name="prompt_menu_not_ready">Menu belum tersedia</string>
    <string name="prompt_failed_get_quota">Gagal perbaharui limit quota</string>
    <string name="prompt_failed_get_fuel">Gagal perbaharui BBM</string>
    <string name="prompt_not_verify">User anda belum terverifikasi, silahkan datang ke Administrator untuk proses verifikasi</string>
    <string name="prompt_submit">Submit</string>
    <string name="prompt_kirim_masukan">Kirim Masukan</string>
    <string name="prompt_Question_1">Generated 1 paragraph, 72 words, 483 bytes</string>
    <string name="prompt_Answer_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam augue augue, dapibus a nisl a, fermentum posuere nunc. Aliquam ut aliquet metus, sed aliquam lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; .</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="prompt_ktp">Photo KTP<font color="red">*</font></string>
    <string name="prompt_nomor_ktp">Nomor KTP<font color="red">*</font></string>
    <string name="prompt_nama_lengkap">Nama Lengkap<font color="red">*</font></string>
    <string name="prompt_no_telp">Nomor Telephone<font color="red">*</font></string>
    <string name="prompt_alamat_email">Alamat Email</string>
    <string name="prompt_password_user">Password<font color="red">*</font></string>
    <string name="prompt_kecamatan">Kecamatan<font color="red">*</font></string>
    <string name="prompt_nomor_surat">Nomor Surat<font color="red">*</font></string>
    <string name="prompt_input_quota">Quota<font color="red">*</font></string>
    <string name="prompt_masa_berlaku">Masa Berlaku<font color="red">*</font></string>
    <string name="prompt_dokumen">Surat Keterangan<font color="red">*</font></string>
</resources>
