<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".activities.RegisterActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:paddingLeft="20dp"
                    android:textSize="50dp"
                    android:background="@color/colorBlue"
                    android:textColor="@color/cardview_light_background"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/prompt_sign_up"/>

                <ImageButton
                    android:id="@+id/imgBtnBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_margin="20dp"
                    android:layout_gravity="left"
                    android:background="@drawable/iconback" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:background="@drawable/rounded_bmotion">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:text="Info Personal"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgCamera"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="20dp"
                        android:src="@drawable/cameraicon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_nomor_ktp"
                        android:layout_margin="10dp"
                        android:textColor="#fff"/>

                    <EditText
                        android:id="@+id/edtNIK"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:hint="@string/prompt_nik"
                        android:gravity="center"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="16"
                        android:background="@drawable/rectangleedittext"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_nama_lengkap"
                        android:layout_margin="10dp"
                        android:textColor="#fff"/>

                    <EditText
                        android:id="@+id/edtFullName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:hint="@string/prompt_fullname"
                        android:gravity="center"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="100"
                        android:background="@drawable/rectangleedittext"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_no_telp"
                        android:layout_margin="10dp"
                        android:textColor="#fff"/>

                    <EditText
                        android:id="@+id/edtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:hint="@string/prompt_phone_numb"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:gravity="center"
                        android:maxLength="12"
                        android:background="@drawable/rectangleedittext"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_alamat_email"
                        android:layout_margin="10dp"
                        android:textColor="#fff"/>

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:hint="@string/prompt_email_address"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:gravity="center"
                        android:maxLength="100"
                        android:background="@drawable/rectangleedittext"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_password_user"
                        android:layout_margin="10dp"
                        android:textColor="#fff"/>

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:hint="@string/prompt_signup_password"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:gravity="center"
                        android:maxLength="50"
                        android:background="@drawable/rectangleedittext"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_kecamatan"
                        android:layout_margin="10dp"
                        android:textColor="#fff"/>

                    <EditText
                        android:id="@+id/edtCity"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:hint="@string/prompt_city"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:gravity="center"
                        android:maxLength="50"
                        android:background="@drawable/rectangleedittext"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:background="@drawable/rounded_bmotion">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="left"
                                    android:gravity="center"
                                    android:textSize="18dp"
                                    android:text="Konsumen Subsidi"
                                    android:textColor="#fff"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.3"
                                    android:orientation="vertical">
                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="right"
                                        android:textSize="18dp"
                                        android:text="Tidak"
                                        android:textColor="#fff"
                                        android:textStyle="normal" />
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.3"
                                    android:orientation="vertical">
                                    <Switch
                                        android:id="@+id/switchSubsidy"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:theme="@style/SwitchTheme"
                                        android:shadowColor="#ff0000"
                                        android:scaleX="1"
                                        android:scaleY="1"
                                        android:checked="false"/>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.3"
                                    android:orientation="vertical">
                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="left"
                                        android:textSize="18dp"
                                        android:text="Ya"
                                        android:textColor="#fff"
                                        android:textStyle="normal" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnSuratKeterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="30dp"
                    android:layout_marginHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:visibility="gone"
                    android:background="@drawable/rounded_bmotion">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:text="Surat Keterangan"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_nomor_surat"
                        android:layout_margin="10dp"
                        android:textColor="#fff"/>

                    <EditText
                        android:id="@+id/docNo"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:background="@drawable/rectangleedittext"
                        android:hint="@string/prompt_noSurat"
                        android:drawablePadding="20dp"
                        android:inputType="text"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_input_quota"
                        android:layout_margin="10dp"
                        android:textColor="#fff"/>

                    <EditText
                        android:id="@+id/quotaSK"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:background="@drawable/rectangleedittext"
                        android:hint="@string/prompt_quota"
                        android:drawablePadding="20dp"
                        android:inputType="number"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_masa_berlaku"
                        android:layout_margin="10dp"
                        android:textColor="#fff"/>

                    <EditText
                        android:id="@+id/expiredDate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:focusable="false"
                        android:background="@drawable/rectangleedittext"
                        android:hint="@string/prompt_exp_date"
                        android:drawablePadding="20dp"
                        android:drawableLeft="@drawable/ic_calendar"
                        android:drawableStart="@drawable/ic_calendar" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_dokumen"
                        android:layout_margin="10dp"
                        android:textColor="#fff"/>

                    <EditText
                        android:id="@+id/uploadFile"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:focusable="false"
                        android:background="@drawable/rectangleedittext"
                        android:drawableLeft="@android:drawable/ic_input_add"
                        android:hint="@string/prompt_add_file_upload"
                        android:drawableStart="@android:drawable/ic_input_add" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/ripple_effect"
                    android:text="@string/prompt_sign_up"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
</ScrollView>